# xconn-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
cmake/: xconnConfig.cmake.in
include/: xconn.hpp
include/xconn_cpp/: authenticators.hpp  base_session.hpp  client.h  client.hpp  joiner.h  peer.h  session.h  session.hpp  session_joiner.hpp  socket_transport.hpp  transports.hpp  types.hpp  url_parser.hpp
include/xconn_cpp/internal/: base_session.hpp  socket_transport.hpp  thread_pool.hpp  types.hpp
include/xconn_cpp/transports/: tcp_transport.hpp  transport.hpp  unix_transport.hpp
src/: authenticators.cpp  base_session.cpp  client.cpp  session.cpp  session_joiner.cpp  socket_transport.cpp  types.cpp  url_parser.cpp
tests/: test_base_session.cpp  test_session.cpp
